[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/UIController.gd" type="Script" id=1]
[ext_resource path="res://UI/DeathScreen/death_screen.png" type="Texture" id=2]
[ext_resource path="res://Music and Sounds/Pause.wav" type="AudioStream" id=3]
[ext_resource path="res://HUD/CharacterUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/DeathScreen.gd" type="Script" id=5]

[node name="UIController" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CharacterUI" parent="." instance=ExtResource( 4 )]

[node name="UIAudioController" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeathScreen" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DeathScreen"]
anchor_right = 12.0
anchor_bottom = 8.0
margin_left = -536.0
margin_top = -240.0
margin_right = 552.0
margin_bottom = 240.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -7.0
margin_right = 73.5
margin_bottom = 7.0
text = "Press enter to respawn"
align = 1

[node name="Tween" type="Tween" parent="DeathScreen"]
